# agentic-ai-engineering

./: .env.example  .gitignore  README.md  askgeorge.ipynb  pyproject.toml
.github/workflows/: ci.yml
askgeorge/: README.md  __init__.py  app.py  deploy_modal.py
askgeorge/core/: __init__.py  agent_scratch.py  agent_sdk.py  config.py  guardrail.py  jobfit.py  knowledge.py  notifier.py  profile.py  prompts.py  ratelimit.py  tools.py
askgeorge/me/: engineering-practices.md  faq.md  linkedin.md  linkedin.txt  projects.md  summary.md  testimonials.md
askgeorge/ui/: __init__.py  theme.py
tests/: retrieval_eval.py
