[project]
name = "agentic-ai-engineering"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "gradio>=6.20.0",
    "ipykernel>=7.3.0",
    "modal>=1.5.2",
    "openai>=2.46.0",
    "pydantic>=2.13.4",
    "python-dotenv>=1.2.2",
    "requests>=2.34.2",
]
